# libhdbpp-mysql

./: CMakeLists.txt
src/: LibHdb++MySQL.cpp
